// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseToast Component Error renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "flex": 1,
          "flexDirection": "row",
          "marginTop": 60,
          "padding": 16,
        },
        {
          "backgroundColor": "#D8292F",
          "borderColor": "#D8292F",
          "width": 675,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 2,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flexShrink": 1,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "fontSize": 14,
                "fontWeight": "bold",
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
          testID="com.ariesbifold:id/ToastTitle"
        >
          Any Error Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
          testID="com.ariesbifold:id/ToastBody"
        >
          Any error message
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-end",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`BaseToast Component Info renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "flex": 1,
          "flexDirection": "row",
          "marginTop": 60,
          "padding": 16,
        },
        {
          "backgroundColor": "#42803E",
          "borderColor": "#42803E",
          "width": 675,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 2,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flexShrink": 1,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "fontSize": 14,
                "fontWeight": "bold",
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
          testID="com.ariesbifold:id/ToastTitle"
        >
          Any Info Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
          testID="com.ariesbifold:id/ToastBody"
        >
          Any info body
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-end",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`BaseToast Component Success renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "flex": 1,
          "flexDirection": "row",
          "marginTop": 60,
          "padding": 16,
        },
        {
          "backgroundColor": "#313132",
          "borderColor": "#2E8540",
          "width": 675,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 2,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flexShrink": 1,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "fontSize": 14,
                "fontWeight": "bold",
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
          testID="com.ariesbifold:id/ToastTitle"
        >
          Any Success Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
          testID="com.ariesbifold:id/ToastBody"
        >
          Any success message
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-end",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`BaseToast Component Warn renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "flex": 1,
          "flexDirection": "row",
          "marginTop": 60,
          "padding": 16,
        },
        {
          "backgroundColor": "#313132",
          "borderColor": "#FCBA19",
          "width": 675,
        },
      ]
    }
  >
    <View
      style={
        {
          "flex": 2,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flexShrink": 1,
          }
        }
      >
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "fontSize": 14,
                "fontWeight": "bold",
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
          testID="com.ariesbifold:id/ToastTitle"
        >
          Any Warning Title
        </Text>
        <Text
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
          testID="com.ariesbifold:id/ToastBody"
        >
          Any warning message
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "flex-end",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;
